# ToolGlass

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  action.yml
.github/workflows/: release.yml  tool_glass.yml
fixtures/home/: .claude.json
fixtures/home/.cline/: mcp.json
fixtures/home/.codex/: config.toml
fixtures/home/.config/goose/: config.yaml
fixtures/home/.cursor/: mcp.json
fixtures/project/: .mcp.json
src/: analysis.rs  baseline.rs  demo.rs  ir.rs  main.rs  mcp.rs  rules.rs  scan.rs
src/adapters/: claude_code.rs  cline.rs  codex.rs  cursor.rs  goose.rs  mod.rs  vscode.rs
src/report/: html.rs  markdown.rs  mod.rs  sarif.rs  terminal.rs
